@@ -4,9 +4,10 @@ Open Mod UI > Tools and click History for full change details:
 
 - added Brain Bulwark 4th level spell by [Demonic Duck]
 - fixed a null exception with touch spells cast off combat
-- fixed Eldritch Smite only triggering on critical
+- fixed Eldritch Smite only triggering on critical hits
 - fixed Patron Moonlit not loosing invisibility after attack
 - fixed Patron Soulblade hex logic to correctly behave on MP
 - fixed Way of Silhouette not loosing invisibility after attack
+- fixed Weapon Master's momentum interaction with action surge
 - changed Monk Ki Points toggle to Distant Hand Technique toggle
 - changed Monk subclasses so only Distant Hand gets above toggle
